--- a/src/style/CreateInf.css
+++ b/src/style/CreateInf.css
@@ -1,10 +1,4 @@
-.home{
+.create{
     background-image: linear-gradient(to right bottom, #6b7ed1, #6f86d6, #738eda, #7896de, #7e9ee2, #7a9ce6, #779beb, #7399ef, #688df4, #6081f8, #5d73fa, #5f64fb);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 100vh;
 }
-.mainhome{
-    width: 85vw;
-}
-
