--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,7 +1,7 @@
 .navbar{
     width: 100%;
     height: 75px;
-    background-color: aliceblue;
+    background-color: rgb(54, 42, 163);
     box-shadow: 0 2px 10px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 6px );
     -webkit-backdrop-filter: blur( 6px );
