--- a/src/style/CompanyCard.css
+++ b/src/style/CompanyCard.css
@@ -13,8 +13,15 @@
     
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .cards h2{
     margin-left: 3vw;
+}
+.buttns{
+    width: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
