--- a/src/style/HrContent.css
+++ b/src/style/HrContent.css
@@ -37,7 +37,7 @@
     border-color: rgb(233, 233, 233);
 }
 .tbhd{
-    color:#8E8E8E;
+    color:#000000;
     margin: 15px;
     font-size: 14px;;
 }
@@ -58,4 +58,11 @@
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: 12px;
+}
+.listl{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 30px;
+    font-size: 10px;
 }
